contact page red dot

--- a/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
+++ b/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
@@ -53,23 +53,51 @@
                         </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - side" class=" img-responsive" src="~/images/resinballs/resinballs-04.jpg" />
+                        <img alt="Natalie Macellaio - Red Dot - detail" class=" img-responsive" src="~/images/resinballs/resinballs-10.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Swarm Revisited - side</h3>
+                            <h3 class="black">Red Dot - detail</h3>
                         </div>
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - detail" class="img-responsive" src="~/images/resinballs/resinballs-06.jpg" />
+                        <img alt="Natalie Macellaio - Red Dot - full" class="img-responsive" src="~/images/resinballs/resinballs-08.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Swarm Revisited - detail</h3>
+                            <h3 class="black">Red Dot - full</h3>
                         </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - full" class="img-responsive" src="~/images/resinballs/resinballs-07.jpg" />
+                        <img alt="Natalie Macellaio - Red Dot - detail cluster" class="img-responsive" src="~/images/resinballs/resinballs-09.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Swarm Revisited - full</h3>
+                            <h3 class="black">Red Dot - detail cluster</h3>
+                        </div>
+                    </article>
+                </div>
+                 <div class="row showcase-thumb-strip">
+                     <article class="col-md-6">
+                         <img alt="Natalie Macellaio - Swarm Revisited - detail" class="img-responsive" src="~/images/resinballs/resinballs-06.jpg" />
+                         <div class="showcase-thumb-strip-inner">
+                             <h3 class="black">Swarm Revisited - detail</h3>
+                         </div>
+                     </article>
+                     <article class="col-md-6">
+                         <img alt="Natalie Macellaio - Swarm Revisited - full" class="img-responsive" src="~/images/resinballs/resinballs-07.jpg" />
+                         <div class="showcase-thumb-strip-inner">
+                             <h3 class="black">Swarm Revisited - full</h3>
+                         </div>
+                     </article>
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - B.S. 1.236 full" class="img-responsive" src="~/images/resinballs/resinballs-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">B.S. 1.236 full</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Swarm Revisited - side" class=" img-responsive" src="~/images/resinballs/resinballs-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Swarm Revisited - side</h3>
                         </div>
                     </article>
                 </div>
