--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -15,15 +15,14 @@
         <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed">
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
-<!--<link href="~/Content/bootstrap.css" rel="stylesheet">-->
-     <!--   <link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+     <!--<link href="~/Content/bootstrap.css" rel="stylesheet">-->
+     <!--<link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
         <link href="~/stylesheets/slimmenu.css" rel="stylesheet">
         <link href="~/stylesheets/navmenu.css" rel="stylesheet"> 
         <link href="~/stylesheets/isotope.css" rel="stylesheet">
         <link href="~/stylesheets/intro02.css" rel="stylesheet">
         <link href="~/stylesheets/venobox.css" rel="stylesheet">
-       <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet">     
-        
+        <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet">            
         <link href="~/stylesheets/main.css" rel="stylesheet">
         <link href="~/stylesheets/main-responsive.css" rel="stylesheet">
         <link href="~/stylesheets/main-retina.css" rel="stylesheet">
@@ -133,7 +132,7 @@
             @RenderBody()
             <footer>
                 <div class="add-top-quarter">
-                    <div class="float-right">
+                    <div class="float-right margin-20">
                         <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Artist</p>
                     </div>
                 </div>
