--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -188,37 +188,39 @@
         </div>
 
           <div class="row">
-             <article class="col-md-4 white-bg stats-block text-center">
-                 <img alt="Trestle Designs jewelry business card" src="~/images/trestle/trestle_bzcrd30front.png" />
-                 <h5 class="font2 black">Jewelry - concrete, silver, weaving</h5>
-                 <h3 class="sub-heading font1 color">Trestle Designs</h3>
-             </article>
-             <article class="col-md-4 color-bg stats-block text-center">
-                 <a href="http://themotherload.org/">
-                     <img alt="The Motherload Project - logo" class="img-responsive" src="~/images/motherload/motherload-logo.jpg" />
-                     <h5 class="font2 black">social network for atists<br /> who are mothers</h5>
-                     <h3 class="sub-heading font1 color">The Mother Load Project</h3>
-                 </a>
-             </article>
-             <article class="col-md-4 softwhite-bg stats-block text-center">
-                 <img class="color" alt="" title="" src="images/icons/1.png" />
-                 <h5 class="font2 black">artist</h5>
-                 <h3 class="sub-heading font1 color">Links</h3>
-             </article>
+              <article class="col-sm-4 col-md-3 white-bg stats-block text-center">
+                  <a href="~/Views/Home/TrestleDesigns.cshtml">
+                      <img alt="Trestle Designs jewelry business card" class="img-responsive" src="~/images/trestle/trestle_bzcrd30front.png" />
+                      <h3 class="sub-heading font1 color">Trestle Designs</h3>
+                  </a>
+              </article>
+              <article class="col-sm-4 col-md-3 color-bg stats-block text-center">
+                  <a href="http://themotherload.org/">
+                      <img alt="The Motherload Project - logo" class="img-responsive" src="~/images/motherload/motherload-logo.jpg" />
+                      <h3 class="sub-heading font1 color">The Mother Load Project</h3>
+                  </a>
+              </article>
+              <article class="col-sm-4 col-md-3 softwhite-bg stats-block text-center">
+                  <img class="img-responsive" alt="photo of links" src="~/images/piercing/piercing-04.jpg" />
+                  <h3 class="sub-heading font1 color">Links</h3>
+              </article>
+              <article class="col-sm-4 col-md-3 softwhite-bg stats-block text-center">
+                  <img class="img-responsive" alt="photo of links" src="~/images/piercing/piercing-04.jpg" />
+                  <h3 class="sub-heading font1 color">Links</h3>
+              </article>
          </div> 
 
     </div>
 </section>
 
 <!-- Contact Section -->
-<section class="page-content" id="contact">
+<section class="page-content pad-bottom" style="background-color:#BD8CBF;" id="contact">
     <div class="container">
         <div class="row">
-            <article class="col-md-6 contact-content-split fullheight text-left common-pad pad-top pad-bottom">
+            <article class="col-md-6 contact-content-split fullheight text-left common-pad">
                 <div class="contact-form-wrap valign">
-                    <h3 class="sub-heading font2 black">Send Message</h3>
-
-                    <div class="contact-item pad-common ">
+                    <h3 class="sub-heading font2 black">Let's Connect</h3>
+                    <div class="contact-item pad-common">
                         <div class="alert alert-error error " id="fname">
                             <p>Name must not be empty</p>
                         </div>
@@ -233,32 +235,27 @@
                                 <input type="text" placeholder="Your Name" id="name" name="name" size="100" class="border-form">
                             </article>
                             <article>
-                                <input type="text" placeholder="Valid email ID" name="email" id="email" size="30" class="border-form">
+                                <input type="text" placeholder="Your Email" name="email" id="email" size="30" class="border-form">
                             </article>
                             <article>
                                 <textarea placeholder="Your Message" name="message" cols="40" rows="3" id="msg" class="border-form"></textarea>
                                 <div class="btn-wrap  text-left">
-                                    <button class="btn btn-eight btn-eight-dark" id="submit" name="submit" type="submit">Send Message</button>
+                                    <button class="btn btn-eight btn-eight-dark" id="submit" name="submit" type="submit">Send Your Message</button>
                                 </div>
                             </article>
                         </form>
                     </div>
                 </div>
-                <!-- contact-form-wrap:ends -->
             </article>
-
             <article class="col-md-6 contact-content-split fullheight text-center common-pad white-bg">
                 <div class="valign">
                     <h1 class="font1 color"><span>Natalie Macellaio</span></h1>
-                    <h3><span class="color-bg black"><a href="#">nataliemacellaio.artist@gmail.com</a></span></h3>
-                    <!-- social icons-->
+                    <h3><span class="color-bg"><a href="#">nataliemacellaio@gmail.com</a></span></h3>
                     <ul class="social-wrap">
                         <li><a href="#"><img alt="" title="" src="" /></a></li>
-
                     </ul>
                 </div>
             </article>
-
         </div>
     </div>
 </section>
