--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -22,15 +22,15 @@ a:focus { outline: none;
 	display: inline-block;
 }
 p{
-	color: #777;
-	font-weight:300;
-	font-size: 14px;
-	line-height:21px;
+	color: #808080;
+	font-weight:400;
+	font-size: 15px;
+	line-height:1.7em;
 }
-h1,h2,h3,h4,h5,h6{
+/*h1,h2,h3,h4,h5,h6{
 	margin-top: 0;
 	font-weight: normal;
-}
+}*/
 .last-page {
     z-index:3000;
 }
@@ -121,6 +121,7 @@ h1,h2,h3,h4,h5,h6{
 	top: 0;
 	width: 100%;
 	height: 20px;
+    background: #fff;
 }
 .sticky-panel-right{
 	top: 0;
@@ -281,11 +282,11 @@ h1,h2,h3,h4,h5,h6{
 	line-height: 19px;
 }
 .sub-heading{
-	font-size: 18px;
-	line-height: 25px;
+	/*font-size: 18px;
+	line-height: 25px;*/
 	letter-spacing: 4px;
 	text-transform: uppercase;
-	font-weight: 200;
+	font-weight: 300;
 	margin-bottom: 10px;
 }
 .btn-eight{
@@ -441,60 +442,6 @@ h1,h2,h3,h4,h5,h6{
 }
 .profile-list li a{
 	display: block;
-}
-.stats-block{
-	padding: 50px;
-}
-.stats-count{
-	font-size: 48px;
-	line-height: 55px;
-	font-weight: 800;
-}
-.news-content{
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-.news-item-wrap{
-	padding: 50px;
-}
- .news-item h1{ 
- 	font-size: 24px;
- 	line-height: 31px;
- 	margin-top: 20px;
-}
- .news-item h2{ 
- 	font-size: 36px;
- 	line-height: 43px;
-}
-.news-item p > span{  
-    font-size: 18px;
-    line-height: 25px;
-    padding: 12px;
-    text-transform: uppercase;
-}
-.news-post-content{
-	padding-top: 40px;
-	padding-bottom: 0px;
-}
-.news-post-content h5{
-	font-weight: 600;
-	font-size: 16px;
-	line-height: 23px;
-	margin-top: 30px;
-	margin-bottom: 0;
-	border-top: solid 5px;
-	padding-top: 30px;
-}
-.news-post-content h4{
-	font-weight: 200;
-	font-size: 12px;
-	line-height: 19px;
-	margin-top: 0px;
-}
-.news-post-content h6>span{
-	font-weight: 200;
-	font-style: italic;
-	padding: 3px;
 }
 .works-filter-wrap{
 	padding: 40px 0;
@@ -716,8 +663,7 @@ h1,h2,h3,h4,h5,h6{
     padding: 0 0 15px 0;
     margin-top: -10px;
     text-align: center;
-}
- 
+} 
         .showcase-thumb-strip-inner h3{
             opacity: 1; 
             font-size: 15px;
@@ -734,8 +680,6 @@ h1,h2,h3,h4,h5,h6{
             line-height: 21px;
             padding: 7px;
         }
-
-
 .contact-bg{
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -888,8 +832,6 @@ fieldset h1 {
 .space-left{
     margin-left: 1%;
 }
-
-
 .alert{
     margin-top: 0px;
     border-radius: 0px;
@@ -900,7 +842,6 @@ fieldset h1 {
          -o-transition: all .8s linear;
             transition: all .8s linear;
 }
-
 .alert > p{
     padding: 5px;
     text-shadow:none;
