--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -136,7 +136,7 @@
         </div>
     </div>
 </section>
-
+<hr />
 <section class="page-section" id="about">
     <div class="container">
         <div class="row">
@@ -188,46 +188,62 @@
         </div>
 
           <div class="row">
-              <article class="col-sm-4 col-md-3 white-bg stats-block text-center">
-                  <a href="~/Views/Home/TrestleDesigns.cshtml">
+              <article class="col-xs-6 col-sm-2 stats-block text-center">
+                  <a href="~/Views/Home/TrestleDesigns.cshtml" target="_blank">
                       <img alt="Trestle Designs jewelry business card" class="img-responsive" src="~/images/trestle/trestle_bzcrd30front.png" />
-                      <h3 class="sub-heading font1 color">Trestle Designs</h3>
+                      <h6 class="sub-heading font1 color">Trestle Designs</h6>
                   </a>
               </article>
-              <article class="col-sm-4 col-md-3 color-bg stats-block text-center">
-                  <a href="http://themotherload.org/">
+              <article class="col-xs-6 col-sm-2 stats-block text-center">
+                  <a href="http://themotherload.org/" target="_blank">
                       <img alt="The Motherload Project - logo" class="img-responsive" src="~/images/motherload/motherload-logo.jpg" />
-                      <h3 class="sub-heading font1 color">The Mother Load Project</h3>
+                      <h6 class="sub-heading font1 color">The Mother Load Project</h6>
                   </a>
               </article>
-              <article class="col-sm-4 col-md-3 softwhite-bg stats-block text-center">
-                  <img class="img-responsive" alt="photo of links" src="~/images/piercing/piercing-04.jpg" />
-                  <h3 class="sub-heading font1 color">Links</h3>
+              <article class="col-xs-6 col-sm-2 stats-block text-center">
+                  <a href="http://rickmaxwell.net" target="_blank">
+                      <img class="img-responsive" alt="photo of links" src="~/images/links/links-01.jpg" />
+                      <h6 class="sub-heading font1 color">Rick Maxwell</h6>
+                  </a>
               </article>
-              <article class="col-sm-4 col-md-3 softwhite-bg stats-block text-center">
-                  <img class="img-responsive" alt="photo of links" src="~/images/piercing/piercing-04.jpg" />
-                  <h3 class="sub-heading font1 color">Links</h3>
+              <article class="col-xs-6 col-sm-2 stats-block text-center">
+                  <a href="http://lisaehrich.com" target="_blank">
+                      <img class="img-responsive" alt="photo of links" src="~/images/links/links-02.jpg" />
+                      <h6 class="sub-heading font1 color">Lisa Ehrich</h6>
+                  </a>
               </article>
-         </div> 
-
+            <article class="col-xs-6 col-sm-2 stats-block text-center">
+                <a href="http://www.shannonmsullivan.com/" target="_blank">
+                    <img class=" img-responsive" alt="photo of links" src="~/images/links/links-03.jpg" />
+                    <h6 class="sub-heading font1 color">Shannon Sullivan</h6>
+                </a>
+            </article>
+            <article class="col-xs-6 col-sm-2 stats-block text-center">
+                <a href="http://www.leslirobertson.com/" target="_blank">
+                    <img class=" img-responsive" alt="photo of links" src="~/images/links/links-04.jpg" />
+                    <h6 class="sub-heading font1 color">Lesli Robertson</h6>
+                </a>
+            </article>
+            
+        </div> 
     </div>
 </section>
-
+<hr />
 <!-- Contact Section -->
-<section class="page-content pad-bottom" style="background-color:#BD8CBF;" id="contact">
+<section class="page-content" id="contact">
     <div class="container">
         <div class="row">
-            <article class="col-md-6 contact-content-split fullheight text-left common-pad">
-                <div class="contact-form-wrap valign">
-                    <h3 class="sub-heading font2 black">Let's Connect</h3>
-                    <div class="contact-item pad-common">
-                        <div class="alert alert-error error " id="fname">
+            <article class="col-md-6 contact-content-split fullheight text-left">
+                <div class="contact-form-wrap">
+                    <h3 class="sub-heading font2 white">Let's Connect</h3>
+                    <div class="contact-item">
+                        <div class="alert alert-error error white" id="fname">
                             <p>Name must not be empty</p>
                         </div>
-                        <div class="alert alert-error  error" id="fmail">
+                        <div class="alert alert-error error white" id="fmail">
                             <p>Please provide a valid email</p>
                         </div>
-                        <div class="alert alert-error  error" id="fmsg">
+                        <div class="alert alert-error error white" id="fmsg">
                             <p>Message should not be empty</p>
                         </div>
                         <form name="myform" id="contactForm" action="sendcontact.php" enctype="multipart/form-data" method="post">
@@ -247,10 +263,10 @@
                     </div>
                 </div>
             </article>
-            <article class="col-md-6 contact-content-split fullheight text-center common-pad white-bg">
+            <article class="col-md-6 contact-content-split fullheight text-center">
                 <div class="valign">
-                    <h1 class="font1 color"><span>Natalie Macellaio</span></h1>
-                    <h3><span class="color-bg"><a href="#">nataliemacellaio@gmail.com</a></span></h3>
+                    <h1 class="font1 color">Natalie Macellaio</h1>
+                    <h3 class=""><a href="nataliemacellaio@gmail.com">nataliemacellaio@gmail.com</a></h3>
                     <ul class="social-wrap">
                         <li><a href="#"><img alt="" title="" src="" /></a></li>
                     </ul>
