--- a/Sandbox/Sandbox/less/color.less
+++ b/Sandbox/Sandbox/less/color.less
@@ -1,5 +1,6 @@
-@color:#BD8CBF;/*light purple*/
-@colorRGBA :rgba(189,140,191,0.8); 
+/*@color:#BD8CBF;*//*light purple*/
+@color:#61559f; /*logo*/
+@colorRGBA :rgba(97,85,159,0.8); 
 @white:#FFFFFF;
 @softwhite:#FAFAFA;
 @whitegray:#EBEBEB;
