--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
         <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist creating and teaching near Dallas, Texas">
         <meta name="keywords" content="Natalie Macellaio">
         <meta name="author" content="tosca ragnini">
-       <link rel="shortcut icon" href="~/favicon.ico">
-        <link rel="icon" type="image/png" href="~/images/favicon/favicon.png" />
+        <link rel="shortcut icon" href="~/favicon.ico">
+        <link rel="icon" type="image/png" href="~/favicon.png" />
         <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed">
         <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed">
         <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed">
@@ -130,10 +130,10 @@
         </nav>
         <div class="mastwrap">          
             @RenderBody()
-            <footer>
+            <footer style="background-color:#61559f;">
                 <div class="add-top-quarter">
                     <div class="float-right margin-20">
-                        <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Artist</p>
+                        <h6 class="softwhite">&copy; @DateTime.Now.Year - Natalie Macellaio - Artist</h6>
                     </div>
                 </div>
             </footer>
