--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -236,7 +236,29 @@
             <article class="col-md-6 contact-content-split fullheight text-left">
                 <div class="contact-form-wrap">
                     <h3 class="sub-heading font2 white">Let's Connect</h3>
-                    <div class="contact-item">
+                    
+                    
+                    <form role="form" name="contactform" id="contactform" method="post" action="/Home/Contact">
+                        <div class="input-text form-group">
+                            <input type="text" id="FullName" name="FullName" class="input-name form-control" placeholder="Full Name" />
+                            <input type="email" id="ContactEmail" name="ContactEmail" class="input-email form-control" placeholder="Email" />
+                            <input type="text" id="ContactPhone" name="ContactPhone" class="input-phone form-control" placeholder="Phone" />
+                        </div>
+                        <div class="input-text form-group">
+                            <textarea type="text" id="ContactMessage" name="ContactMessage" class="input-text form-control" maxlength="500" wrap="hard" placeholder="Message"></textarea>
+                        </div>
+                        <div class="input-text form-group">
+                            <input type="submit" class="btn btn-default btn-block text-right" value="Submit" />
+                        </div>
+                    </form>
+
+
+
+
+
+
+
+<!--<div class="contact-item">
                         <div class="alert alert-error error white" id="fname">
                             <p>Name must not be empty</p>
                         </div>
@@ -260,7 +282,7 @@
                                 </div>
                             </article>
                         </form>
-                    </div>
+                    </div>-->
                 </div>
             </article>
             <article class="col-md-6 contact-content-split fullheight text-center">
