added archive metalpods

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -96,6 +96,15 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
+                    <img alt="evolve" class="img-responsive" src="~/images/metalpods/metalpod-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" href="~/Metal-Pods">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">METAL PODS</h3>
+                            <p class="white"><span class="black-bg">METAL PODS EXHIBIT</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" class="img-responsive" src="~/images/wannabe/wannabe-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-type="iframe" data-slide-index="#wannabe" href="~/Wannabe">
                         <div class="works-item-inner valign">
@@ -233,7 +242,7 @@
 <section class="page-content" id="contact">
     <div class="container">
         <div class="row">
-            <article class="col-md-6 contact-content-split fullheight text-left">
+            <article class="col-md-6 contact-content-split text-left">
                 <div class="contact-form-wrap">
                     <h3 class="sub-heading font2 white">Let's Connect</h3>
                     
@@ -251,15 +260,10 @@
                             <input type="submit" class="btn btn-default btn-block text-right" value="Submit" />
                         </div>
                     </form>
-
-
-
-
-
                 </div>
             </article>
-            <article class="col-md-6 contact-content-split fullheight text-center">
-                <div class="valign">
+            <article class="col-md-6 contact-content-split text-center">
+                <div class="add-top-half">
                     <h1 class="font1 color">Natalie Macellaio</h1>
                     <h3 class=""><a href="nataliemacellaio@gmail.com">nataliemacellaio@gmail.com</a></h3>
                     <ul class="social-wrap">
