--- a/Sandbox/Sandbox/Views/Home/Phenomenon.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Phenomenon.cshtml
@@ -21,8 +21,8 @@
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <h3 class="sub-heading">ARTIST STATEMENT</h3>
-                                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
-                            </div>
+                                <p class="dark"></p>
+                             </div>
                         </div>
                     </article>
                 </div>
