--- a/Sandbox/Sandbox/Views/Home/Shifting.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Shifting.cshtml
@@ -24,8 +24,7 @@
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <h3 class="sub-heading">ARTIST STATEMENT</h3>
-                                <p class="dark">                               
-                                    While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
+                                <p class="dark"> While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
                                 </p>
                             </div>
                         </div>
