--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -66,6 +66,7 @@
                                 <a href="~/Cracks">SHIFTING</a>
                                 <a href="~/Occupancy">OCCUPANCY</a>
                                 <a href="~/Combat">COMBAT</a>
+                                <a href="~/Metal-Pods">METAL PODS</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
@@ -106,7 +107,8 @@
                         <li><a class="font2 black ease" href="~/Bump">RESIN PUSHING METAL</a></li>
                         <li><a class="font2 black ease" href="~/Cracks">SHIFTING</a></li>
                         <li><a class="font2 black ease" href="~/Occupancy">OCCUPANCY</a></li>
-                        <li><a class="font2 black ease" href="~/Combat">COMBAT</a></li>                        
+                        <li><a class="font2 black ease" href="~/Combat">COMBAT</a></li>
+                        <li><a class="font2 black ease" href="~/Metal-Pods">METAL PODS</a></li>                        
                      </ul>
                 </li>
                 <li>
