--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
- ViewBag.Title = "Natalie Macellaio | Resn Pushing Metal";
+ ViewBag.Title = "Natalie Macellaio | Resin Pushing Metal";
 }
 <section class="page-section" id="bump">
     <div class="container">
@@ -9,7 +9,7 @@
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
-                    <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
+                    <article class="col-md-6 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <p><span>BUMP, BULGE, BOILING OVER, CRACK, ROACH STUDY</span></p>
@@ -19,11 +19,12 @@
                             </div>
                         </div>
                     </article>
-                    <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
+                    <article class="col-md-6 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <h3 class="sub-heading">ARTIST STATEMENT</h3>
-                                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
+                                <p class="dark">In this series of works I am interested in exploring the relationship between the physical properties of resin and metal. I am interested in the plasticity of metal as it responds to the resin visually is in direct contrast to the actual properties of the materials. The rigidity of the metal also forces the resin to form around, bulging through and sometimes spilling over the forms to emphasis the contrasting materials. The push and pull of materials continues to interest me and push the properties of both materials to their limits.
+                                </p> 
                             </div>
                         </div>
                     </article>
@@ -58,13 +59,13 @@
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bulge-detail" class="img-responsive custom-overlay-6" src="images/bulge/bulge-02.jpg" />
+                        <img alt="Natalie Macellaio - Bulge-detail" class="img-responsive" src="images/bulge/bulge-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Bulge -detail</h3>
                         </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bulge-crawl" class="img-responsive custom-overlay-6" src="images/bulge/bulge-03.jpg" />
+                        <img alt="Natalie Macellaio - Bulge-crawl" class="img-responsive" src="images/bulge/bulge-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Bulge -crawl</h3>
                         </div>
