--- a/Sandbox/Sandbox/Views/Home/TheMerger.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMerger.cshtml
@@ -10,7 +10,7 @@
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
-                    <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
+                    <article class="col-md-6 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <p><span>a collaboration with Jeff Ross</span></p>
@@ -20,11 +20,11 @@
                             </div>
                         </div>                   
                     </article>
-                    <article class="col-md-4 text-left showcase-single-item-wrap white-bg">
+                    <article class="col-md-6 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <h3 class="sub-heading">About The Merger</h3>
-                                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nisl diam, laoreet quis eros ac, placerat tincidunt neque. Vivamus molestie, nisl eu accumsan elementum, libero neque aliquam nibh, in venenatis velit velit eget nunc. Aliquam non venenatis justo, vitae feugiat urna. Morbi et tempor purus.</p>
+                                <h3 class="sub-heading">ARTIST STATEMENT</h3>
+                                <p class="dark">Nostalgia is a funny thing, we long to hold onto to memories through the objects that surround us. When one or two people share an experience, they want to cherish it with tangible objects. The Merger is the story of 2 lives coming together and finding ways to share past experiences with present ones. Some of these items have long histories, some have funny antidotes, and some where just picked up or created along the way. Jeff Ross and I decided to honor these objects and our merging lives with this piece in hopes to create new stories and memories to hold on to. </p>
                             </div>
                         </div>
                     </article>
@@ -33,9 +33,9 @@
                         <div class="single-project-slider-wrap">
                             <ul class="single-project-slider bxslider">
                                 <li><img alt="The Merger 1" src="images/merger/merger-01.jpg" /></li>
-                                <li><img alt="The Merger 1" src="images/merger/merger-01.jpg" /> </li>
-                                <li><img alt="The Merger 1" src="images/merger/merger-01.jpg" /> </li>
-                                <li><img alt="The Merger 1" src="images/merger/merger-01.jpg" /> </li>
+                                <li><img alt="The Merger 2" src="images/merger/merger-02.jpg" /> </li>
+                                <li><img alt="The Merger 3" src="images/merger/merger-03.jpg" /> </li>
+                                <li><img alt="The Merger 4" src="images/merger/merger-04.jpg" /> </li>
                             </ul>
                         </div>
                     </div>
